// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dbux-babel-plugin allFunctionTypes.es5.js: allFunctionTypes.es5.js 1`] = `
"
/* #################################################################################### */
function f1() {

}

const f2 = function _f2() {

};

const f3 = () => {

};

const o = {
  f4() {},
  f5: () => {}
};

class C {
  f6() {}
  f7 = () => {};
}

// // generator function
// function *f8() {
//   yield 1;
//   yield 2;
// }

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var _dbuxRuntime = require('dbux-runtime');

var _dbux = _dbux_init(_dbuxRuntime);

try {
  /* #################################################################################### */
  var f1 = function f1() {
    var _contextId2 = _dbux.pushImmediate(2);

    try {} finally {
      _dbux.popImmediate(_contextId2);
    }
  };

  var f2 = function _f2() {
    var _contextId3 = _dbux.pushImmediate(3);

    try {} finally {
      _dbux.popImmediate(_contextId3);
    }
  };

  var f3 = function f3() {
    var _contextId4 = _dbux.pushImmediate(4);

    try {} finally {
      _dbux.popImmediate(_contextId4);
    }
  };

  var o = {
    f4: function f4() {
      var _contextId5 = _dbux.pushImmediate(5);

      try {} finally {
        _dbux.popImmediate(_contextId5);
      }
    },
    f5: function f5() {
      var _contextId6 = _dbux.pushImmediate(6);

      try {} finally {
        _dbux.popImmediate(_contextId6);
      }
    }
  };

  var C =
  /*#__PURE__*/
  function () {
    function C() {
      this.f7 = function () {
        var _contextId7 = _dbux.pushImmediate(7);

        try {} finally {
          _dbux.popImmediate(_contextId7);
        }
      };
    }

    var _proto = C.prototype;

    _proto.f6 = function f6() {
      var _contextId8 = _dbux.pushImmediate(8);

      try {} finally {
        _dbux.popImmediate(_contextId8);
      }
    };

    return C;
  }(); // // generator function
  // function *f8() {
  //   yield 1;
  //   yield 2;
  // }

} finally {
  _dbux.popProgram(_contextId);
}

function _dbux_init() {
  return _dbuxRuntime.initProgram({
    \\"filename\\": \\"src/__tests__/__samplesInput__/allFunctionTypes.js\\",
    \\"staticSites\\": [{
      \\"staticId\\": 1,
      \\"type\\": 1,
      \\"name\\": \\"src/__tests__/__samplesInput__/allFunctionTypes.js\\"
    }, {
      \\"staticId\\": 2,
      \\"type\\": 2,
      \\"line\\": 2,
      \\"parent\\": 1
    }, {
      \\"staticId\\": 3,
      \\"type\\": 2,
      \\"name\\": \\"_f2\\",
      \\"line\\": 6,
      \\"parent\\": 1
    }, {
      \\"staticId\\": 4,
      \\"type\\": 2,
      \\"line\\": 10,
      \\"parent\\": 1
    }, {
      \\"staticId\\": 5,
      \\"type\\": 2,
      \\"line\\": 15,
      \\"parent\\": 1
    }, {
      \\"staticId\\": 6,
      \\"type\\": 2,
      \\"name\\": \\"f5\\",
      \\"line\\": 16,
      \\"parent\\": 1
    }, {
      \\"staticId\\": 7,
      \\"type\\": 2,
      \\"line\\": 21,
      \\"parent\\": 1
    }, {
      \\"staticId\\": 8,
      \\"type\\": 2,
      \\"name\\": \\"f6\\",
      \\"line\\": 20,
      \\"parent\\": 1
    }]
  });
}
"
`;

exports[`dbux-babel-plugin allFunctionTypes.esNext.js: allFunctionTypes.esNext.js 1`] = `
"
/* #################################################################################### */
function f1() {

}

const f2 = function _f2() {

};

const f3 = () => {

};

const o = {
  f4() {},
  f5: () => {}
};

class C {
  f6() {}
  f7 = () => {};
}

// // generator function
// function *f8() {
//   yield 1;
//   yield 2;
// }

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

const _dbuxRuntime = require('dbux-runtime');

const _dbux = _dbux_init(_dbuxRuntime);

try {
  /* #################################################################################### */
  function f1() {
    const _contextId2 = _dbux.pushImmediate(2);

    try {} finally {
      _dbux.popImmediate(_contextId2);
    }
  }

  const f2 = function _f2() {
    const _contextId3 = _dbux.pushImmediate(3);

    try {} finally {
      _dbux.popImmediate(_contextId3);
    }
  };

  const f3 = () => {
    const _contextId4 = _dbux.pushImmediate(4);

    try {} finally {
      _dbux.popImmediate(_contextId4);
    }
  };

  const o = {
    f4() {
      const _contextId5 = _dbux.pushImmediate(5);

      try {} finally {
        _dbux.popImmediate(_contextId5);
      }
    },

    f5: () => {
      const _contextId6 = _dbux.pushImmediate(6);

      try {} finally {
        _dbux.popImmediate(_contextId6);
      }
    }
  };

  class C {
    constructor() {
      this.f7 = () => {
        const _contextId7 = _dbux.pushImmediate(7);

        try {} finally {
          _dbux.popImmediate(_contextId7);
        }
      };
    }

    f6() {
      const _contextId8 = _dbux.pushImmediate(8);

      try {} finally {
        _dbux.popImmediate(_contextId8);
      }
    }

  } // // generator function
  // function *f8() {
  //   yield 1;
  //   yield 2;
  // }

} finally {
  _dbux.popProgram(_contextId);
}

function _dbux_init() {
  return _dbuxRuntime.initProgram({
    \\"filename\\": \\"src/__tests__/__samplesInput__/allFunctionTypes.js\\",
    \\"staticSites\\": [{
      \\"staticId\\": 1,
      \\"type\\": 1,
      \\"name\\": \\"src/__tests__/__samplesInput__/allFunctionTypes.js\\"
    }, {
      \\"staticId\\": 2,
      \\"type\\": 2,
      \\"name\\": \\"f1\\",
      \\"line\\": 2,
      \\"parent\\": 1
    }, {
      \\"staticId\\": 3,
      \\"type\\": 2,
      \\"name\\": \\"_f2\\",
      \\"line\\": 6,
      \\"parent\\": 1
    }, {
      \\"staticId\\": 4,
      \\"type\\": 2,
      \\"line\\": 10,
      \\"parent\\": 1
    }, {
      \\"staticId\\": 5,
      \\"type\\": 2,
      \\"line\\": 15,
      \\"parent\\": 1
    }, {
      \\"staticId\\": 6,
      \\"type\\": 2,
      \\"line\\": 16,
      \\"parent\\": 1
    }, {
      \\"staticId\\": 7,
      \\"type\\": 2,
      \\"line\\": 21,
      \\"parent\\": 1
    }, {
      \\"staticId\\": 8,
      \\"type\\": 2,
      \\"line\\": 20,
      \\"parent\\": 1
    }]
  });
}
"
`;

exports[`dbux-babel-plugin example1.es5.js: example1.es5.js 1`] = `
"
/* #################################################################################### */
function f1(x,y) {
}

class A {
  constructor() {
    this.m = new Map();
    this.s = new Set();
  }

  getX() {}
}

const f2 = (z,w) => {};

export {
  f1,
  A,
  f2
}

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

require(\\"core-js/modules/es.array.iterator.js\\");

require(\\"core-js/modules/es.map.js\\");

require(\\"core-js/modules/es.object.to-string.js\\");

require(\\"core-js/modules/es.set.js\\");

require(\\"core-js/modules/es.string.iterator.js\\");

require(\\"core-js/modules/web.dom-collections.iterator.js\\");

var _dbuxRuntime = require('dbux-runtime');

var _dbux = _dbux_init(_dbuxRuntime);

try {
  /* #################################################################################### */
  var f1 = function f1(x, y) {
    var _contextId2 = _dbux.pushImmediate(2);

    try {} finally {
      _dbux.popImmediate(_contextId2);
    }
  };

  var A =
  /*#__PURE__*/
  function () {
    function A() {
      var _contextId3 = _dbux.pushImmediate(3);

      try {
        this.m = new Map();
        this.s = new Set();
      } finally {
        _dbux.popImmediate(_contextId3);
      }
    }

    var _proto = A.prototype;

    _proto.getX = function getX() {
      var _contextId4 = _dbux.pushImmediate(4);

      try {} finally {
        _dbux.popImmediate(_contextId4);
      }
    };

    return A;
  }();

  var f2 = function f2(z, w) {
    var _contextId5 = _dbux.pushImmediate(5);

    try {} finally {
      _dbux.popImmediate(_contextId5);
    }
  };

  export { f1, A, f2 };
} finally {
  _dbux.popProgram(_contextId);
}

function _dbux_init() {
  return _dbuxRuntime.initProgram({
    \\"filename\\": \\"src/__tests__/__samplesInput__/example1.js\\",
    \\"staticSites\\": [{
      \\"staticId\\": 1,
      \\"type\\": 1,
      \\"name\\": \\"src/__tests__/__samplesInput__/example1.js\\"
    }, {
      \\"staticId\\": 2,
      \\"type\\": 2,
      \\"line\\": 2,
      \\"parent\\": 1
    }, {
      \\"staticId\\": 3,
      \\"type\\": 2,
      \\"name\\": \\"A\\",
      \\"line\\": 6,
      \\"parent\\": 1
    }, {
      \\"staticId\\": 4,
      \\"type\\": 2,
      \\"name\\": \\"getX\\",
      \\"line\\": 11,
      \\"parent\\": 1
    }, {
      \\"staticId\\": 5,
      \\"type\\": 2,
      \\"line\\": 14,
      \\"parent\\": 1
    }]
  });
}
"
`;

exports[`dbux-babel-plugin example1.esNext.js: example1.esNext.js 1`] = `
"
/* #################################################################################### */
function f1(x,y) {
}

class A {
  constructor() {
    this.m = new Map();
    this.s = new Set();
  }

  getX() {}
}

const f2 = (z,w) => {};

export {
  f1,
  A,
  f2
}

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

const _dbuxRuntime = require('dbux-runtime');

const _dbux = _dbux_init(_dbuxRuntime);

try {
  /* #################################################################################### */
  function f1(x, y) {
    const _contextId2 = _dbux.pushImmediate(2);

    try {} finally {
      _dbux.popImmediate(_contextId2);
    }
  }

  class A {
    constructor() {
      const _contextId3 = _dbux.pushImmediate(3);

      try {
        this.m = new Map();
        this.s = new Set();
      } finally {
        _dbux.popImmediate(_contextId3);
      }
    }

    getX() {
      const _contextId4 = _dbux.pushImmediate(4);

      try {} finally {
        _dbux.popImmediate(_contextId4);
      }
    }

  }

  const f2 = (z, w) => {
    const _contextId5 = _dbux.pushImmediate(5);

    try {} finally {
      _dbux.popImmediate(_contextId5);
    }
  };

  export { f1, A, f2 };
} finally {
  _dbux.popProgram(_contextId);
}

function _dbux_init() {
  return _dbuxRuntime.initProgram({
    \\"filename\\": \\"src/__tests__/__samplesInput__/example1.js\\",
    \\"staticSites\\": [{
      \\"staticId\\": 1,
      \\"type\\": 1,
      \\"name\\": \\"src/__tests__/__samplesInput__/example1.js\\"
    }, {
      \\"staticId\\": 2,
      \\"type\\": 2,
      \\"name\\": \\"f1\\",
      \\"line\\": 2,
      \\"parent\\": 1
    }, {
      \\"staticId\\": 3,
      \\"type\\": 2,
      \\"line\\": 6,
      \\"parent\\": 1
    }, {
      \\"staticId\\": 4,
      \\"type\\": 2,
      \\"line\\": 11,
      \\"parent\\": 1
    }, {
      \\"staticId\\": 5,
      \\"type\\": 2,
      \\"line\\": 14,
      \\"parent\\": 1
    }]
  });
}
"
`;

exports[`dbux-babel-plugin example2.es5.js: example2.es5.js 1`] = `
"
/* #################################################################################### */
import { A } from './example1';

(function main() {
  console.log(new A());
})();

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var _dbuxRuntime = require('dbux-runtime');

var _dbux = _dbux_init(_dbuxRuntime);

try {
  /* #################################################################################### */
  import { A } from './example1';

  (function main() {
    var _contextId2 = _dbux.pushImmediate(2);

    try {
      console.log(new A());
    } finally {
      _dbux.popImmediate(_contextId2);
    }
  })();
} finally {
  _dbux.popProgram(_contextId);
}

function _dbux_init() {
  return _dbuxRuntime.initProgram({
    \\"filename\\": \\"src/__tests__/__samplesInput__/example2.js\\",
    \\"staticSites\\": [{
      \\"staticId\\": 1,
      \\"type\\": 1,
      \\"name\\": \\"src/__tests__/__samplesInput__/example2.js\\"
    }, {
      \\"staticId\\": 2,
      \\"type\\": 2,
      \\"name\\": \\"main\\",
      \\"line\\": 4,
      \\"parent\\": 1
    }]
  });
}
"
`;

exports[`dbux-babel-plugin example2.esNext.js: example2.esNext.js 1`] = `
"
/* #################################################################################### */
import { A } from './example1';

(function main() {
  console.log(new A());
})();

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

const _dbuxRuntime = require('dbux-runtime');

const _dbux = _dbux_init(_dbuxRuntime);

try {
  /* #################################################################################### */
  import { A } from './example1';

  (function main() {
    const _contextId2 = _dbux.pushImmediate(2);

    try {
      console.log(new A());
    } finally {
      _dbux.popImmediate(_contextId2);
    }
  })();
} finally {
  _dbux.popProgram(_contextId);
}

function _dbux_init() {
  return _dbuxRuntime.initProgram({
    \\"filename\\": \\"src/__tests__/__samplesInput__/example2.js\\",
    \\"staticSites\\": [{
      \\"staticId\\": 1,
      \\"type\\": 1,
      \\"name\\": \\"src/__tests__/__samplesInput__/example2.js\\"
    }, {
      \\"staticId\\": 2,
      \\"type\\": 2,
      \\"name\\": \\"main\\",
      \\"line\\": 4,
      \\"parent\\": 1
    }]
  });
}
"
`;

exports[`dbux-babel-plugin executionContextAsync.es5.js: executionContextAsync.es5.js 1`] = `
"
/* #################################################################################### */
async function af1() {
  return Promise.resolve(1);
}

async function af2() {
  await af1();
  await af1();

  return 2 + af1();
}

async function af33(delay) {
  return new Promise(r => {
    setTimeout(r.bind(33), delay);
  });
}

async function af44() {
  const a = await af33(100);
  const b = await af33(50);

  return a+b + af33(10);
}

(async function main() {
  return Promise.all([
    af2(),
    af44()
  ]);
})();

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

require(\\"core-js/modules/es.array.iterator.js\\");

require(\\"core-js/modules/es.function.bind.js\\");

require(\\"core-js/modules/es.object.to-string.js\\");

require(\\"core-js/modules/es.promise.js\\");

require(\\"core-js/modules/es.string.iterator.js\\");

require(\\"core-js/modules/web.dom-collections.iterator.js\\");

require(\\"core-js/modules/web.timers.js\\");

require(\\"regenerator-runtime/runtime.js\\");

var _dbuxRuntime = require('dbux-runtime');

var _dbux = _dbux_init(_dbuxRuntime);

try {
  /* #################################################################################### */
  var af1 = function af1() {
    var _contextId2;

    return regeneratorRuntime.async(function af1$(_context) {
      while (1) {
        switch (_context.prev = _context.next) {
          case 0:
            _contextId2 = _dbux.pushImmediate(2);
            _context.prev = 1;
            return _context.abrupt(\\"return\\", Promise.resolve(1));

          case 3:
            _context.prev = 3;

            _dbux.popImmediate(_contextId2);

            return _context.finish(3);

          case 6:
          case \\"end\\":
            return _context.stop();
        }
      }
    }, null, null, [[1,, 3, 6]]);
  };

  var af2 = function af2() {
    var _contextId3;

    return regeneratorRuntime.async(function af2$(_context2) {
      while (1) {
        switch (_context2.prev = _context2.next) {
          case 0:
            _contextId3 = _dbux.pushImmediate(3);
            _context2.prev = 1;
            _context2.next = 4;
            return regeneratorRuntime.awrap(af1());

          case 4:
            _context2.next = 6;
            return regeneratorRuntime.awrap(af1());

          case 6:
            return _context2.abrupt(\\"return\\", 2 + af1());

          case 7:
            _context2.prev = 7;

            _dbux.popImmediate(_contextId3);

            return _context2.finish(7);

          case 10:
          case \\"end\\":
            return _context2.stop();
        }
      }
    }, null, null, [[1,, 7, 10]]);
  };

  var af33 = function af33(delay) {
    var _contextId4;

    return regeneratorRuntime.async(function af33$(_context3) {
      while (1) {
        switch (_context3.prev = _context3.next) {
          case 0:
            _contextId4 = _dbux.pushImmediate(4);
            _context3.prev = 1;
            return _context3.abrupt(\\"return\\", new Promise(function (r) {
              var _contextId6 = _dbux.pushImmediate(6);

              try {
                var _contextId5 = _dbux.pushImmediate(5);

                try {
                  setTimeout(r.bind(33), delay);
                } finally {
                  _dbux.popImmediate(_contextId5);
                }
              } finally {
                _dbux.popImmediate(_contextId6);
              }
            }));

          case 3:
            _context3.prev = 3;

            _dbux.popImmediate(_contextId4);

            return _context3.finish(3);

          case 6:
          case \\"end\\":
            return _context3.stop();
        }
      }
    }, null, null, [[1,, 3, 6]]);
  };

  var af44 = function af44() {
    var _contextId7, _a, _b;

    return regeneratorRuntime.async(function af44$(_context4) {
      while (1) {
        switch (_context4.prev = _context4.next) {
          case 0:
            _contextId7 = _dbux.pushImmediate(7);
            _context4.prev = 1;
            _context4.next = 4;
            return regeneratorRuntime.awrap(af33(100));

          case 4:
            _a = _context4.sent;
            _context4.next = 7;
            return regeneratorRuntime.awrap(af33(50));

          case 7:
            _b = _context4.sent;
            return _context4.abrupt(\\"return\\", _a + _b + af33(10));

          case 9:
            _context4.prev = 9;

            _dbux.popImmediate(_contextId7);

            return _context4.finish(9);

          case 12:
          case \\"end\\":
            return _context4.stop();
        }
      }
    }, null, null, [[1,, 9, 12]]);
  };

  (function main() {
    var _contextId8;

    return regeneratorRuntime.async(function main$(_context5) {
      while (1) {
        switch (_context5.prev = _context5.next) {
          case 0:
            _contextId8 = _dbux.pushImmediate(8);
            _context5.prev = 1;
            return _context5.abrupt(\\"return\\", Promise.all([af2(), af44()]));

          case 3:
            _context5.prev = 3;

            _dbux.popImmediate(_contextId8);

            return _context5.finish(3);

          case 6:
          case \\"end\\":
            return _context5.stop();
        }
      }
    }, null, null, [[1,, 3, 6]]);
  })();
} finally {
  _dbux.popProgram(_contextId);
}

function _dbux_init() {
  return _dbuxRuntime.initProgram({
    \\"filename\\": \\"src/__tests__/__samplesInput__/executionContextAsync.js\\",
    \\"staticSites\\": [{
      \\"staticId\\": 1,
      \\"type\\": 1,
      \\"name\\": \\"src/__tests__/__samplesInput__/executionContextAsync.js\\"
    }, {
      \\"staticId\\": 2,
      \\"type\\": 2,
      \\"line\\": 2,
      \\"parent\\": 1
    }, {
      \\"staticId\\": 3,
      \\"type\\": 2,
      \\"line\\": 6,
      \\"parent\\": 1
    }, {
      \\"staticId\\": 4,
      \\"type\\": 2,
      \\"line\\": 13,
      \\"parent\\": 1
    }, {
      \\"staticId\\": 5,
      \\"type\\": 2,
      \\"line\\": 14,
      \\"parent\\": 4
    }, {
      \\"staticId\\": 6,
      \\"type\\": 2,
      \\"line\\": 14,
      \\"parent\\": 4
    }, {
      \\"staticId\\": 7,
      \\"type\\": 2,
      \\"line\\": 19,
      \\"parent\\": 1
    }, {
      \\"staticId\\": 8,
      \\"type\\": 2,
      \\"name\\": \\"main\\",
      \\"line\\": 26,
      \\"parent\\": 1
    }]
  });
}
"
`;

exports[`dbux-babel-plugin executionContextAsync.esNext.js: executionContextAsync.esNext.js 1`] = `
"
/* #################################################################################### */
async function af1() {
  return Promise.resolve(1);
}

async function af2() {
  await af1();
  await af1();

  return 2 + af1();
}

async function af33(delay) {
  return new Promise(r => {
    setTimeout(r.bind(33), delay);
  });
}

async function af44() {
  const a = await af33(100);
  const b = await af33(50);

  return a+b + af33(10);
}

(async function main() {
  return Promise.all([
    af2(),
    af44()
  ]);
})();

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

const _dbuxRuntime = require('dbux-runtime');

const _dbux = _dbux_init(_dbuxRuntime);

try {
  /* #################################################################################### */
  async function af1() {
    const _contextId2 = _dbux.pushImmediate(2);

    try {
      return Promise.resolve(1);
    } finally {
      _dbux.popImmediate(_contextId2);
    }
  }

  async function af2() {
    const _contextId3 = _dbux.pushImmediate(3);

    try {
      await af1();
      await af1();
      return 2 + af1();
    } finally {
      _dbux.popImmediate(_contextId3);
    }
  }

  async function af33(delay) {
    const _contextId4 = _dbux.pushImmediate(4);

    try {
      return new Promise(r => {
        const _contextId5 = _dbux.pushImmediate(5);

        try {
          setTimeout(r.bind(33), delay);
        } finally {
          _dbux.popImmediate(_contextId5);
        }
      });
    } finally {
      _dbux.popImmediate(_contextId4);
    }
  }

  async function af44() {
    const _contextId6 = _dbux.pushImmediate(6);

    try {
      const a = await af33(100);
      const b = await af33(50);
      return a + b + af33(10);
    } finally {
      _dbux.popImmediate(_contextId6);
    }
  }

  (async function main() {
    const _contextId7 = _dbux.pushImmediate(7);

    try {
      return Promise.all([af2(), af44()]);
    } finally {
      _dbux.popImmediate(_contextId7);
    }
  })();
} finally {
  _dbux.popProgram(_contextId);
}

function _dbux_init() {
  return _dbuxRuntime.initProgram({
    \\"filename\\": \\"src/__tests__/__samplesInput__/executionContextAsync.js\\",
    \\"staticSites\\": [{
      \\"staticId\\": 1,
      \\"type\\": 1,
      \\"name\\": \\"src/__tests__/__samplesInput__/executionContextAsync.js\\"
    }, {
      \\"staticId\\": 2,
      \\"type\\": 2,
      \\"name\\": \\"af1\\",
      \\"line\\": 2,
      \\"parent\\": 1
    }, {
      \\"staticId\\": 3,
      \\"type\\": 2,
      \\"name\\": \\"af2\\",
      \\"line\\": 6,
      \\"parent\\": 1
    }, {
      \\"staticId\\": 4,
      \\"type\\": 2,
      \\"name\\": \\"af33\\",
      \\"line\\": 13,
      \\"parent\\": 1
    }, {
      \\"staticId\\": 5,
      \\"type\\": 2,
      \\"line\\": 14,
      \\"parent\\": 4
    }, {
      \\"staticId\\": 6,
      \\"type\\": 2,
      \\"name\\": \\"af44\\",
      \\"line\\": 19,
      \\"parent\\": 1
    }, {
      \\"staticId\\": 7,
      \\"type\\": 2,
      \\"name\\": \\"main\\",
      \\"line\\": 26,
      \\"parent\\": 1
    }]
  });
}
"
`;

exports[`dbux-babel-plugin executionContextSimple.es5.js: executionContextSimple.es5.js 1`] = `
"
/* #################################################################################### */
function f1() {

}

function f2() {
  f1();
  f1();
}


f2();

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var _dbuxRuntime = require('dbux-runtime');

var _dbux = _dbux_init(_dbuxRuntime);

try {
  /* #################################################################################### */
  var f1 = function f1() {
    var _contextId2 = _dbux.pushImmediate(2);

    try {} finally {
      _dbux.popImmediate(_contextId2);
    }
  };

  var f2 = function f2() {
    var _contextId3 = _dbux.pushImmediate(3);

    try {
      f1();
      f1();
    } finally {
      _dbux.popImmediate(_contextId3);
    }
  };

  f2();
} finally {
  _dbux.popProgram(_contextId);
}

function _dbux_init() {
  return _dbuxRuntime.initProgram({
    \\"filename\\": \\"src/__tests__/__samplesInput__/executionContextSimple.js\\",
    \\"staticSites\\": [{
      \\"staticId\\": 1,
      \\"type\\": 1,
      \\"name\\": \\"src/__tests__/__samplesInput__/executionContextSimple.js\\"
    }, {
      \\"staticId\\": 2,
      \\"type\\": 2,
      \\"line\\": 2,
      \\"parent\\": 1
    }, {
      \\"staticId\\": 3,
      \\"type\\": 2,
      \\"line\\": 6,
      \\"parent\\": 1
    }]
  });
}
"
`;

exports[`dbux-babel-plugin executionContextSimple.esNext.js: executionContextSimple.esNext.js 1`] = `
"
/* #################################################################################### */
function f1() {

}

function f2() {
  f1();
  f1();
}


f2();

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

const _dbuxRuntime = require('dbux-runtime');

const _dbux = _dbux_init(_dbuxRuntime);

try {
  /* #################################################################################### */
  function f1() {
    const _contextId2 = _dbux.pushImmediate(2);

    try {} finally {
      _dbux.popImmediate(_contextId2);
    }
  }

  function f2() {
    const _contextId3 = _dbux.pushImmediate(3);

    try {
      f1();
      f1();
    } finally {
      _dbux.popImmediate(_contextId3);
    }
  }

  f2();
} finally {
  _dbux.popProgram(_contextId);
}

function _dbux_init() {
  return _dbuxRuntime.initProgram({
    \\"filename\\": \\"src/__tests__/__samplesInput__/executionContextSimple.js\\",
    \\"staticSites\\": [{
      \\"staticId\\": 1,
      \\"type\\": 1,
      \\"name\\": \\"src/__tests__/__samplesInput__/executionContextSimple.js\\"
    }, {
      \\"staticId\\": 2,
      \\"type\\": 2,
      \\"name\\": \\"f1\\",
      \\"line\\": 2,
      \\"parent\\": 1
    }, {
      \\"staticId\\": 3,
      \\"type\\": 2,
      \\"name\\": \\"f2\\",
      \\"line\\": 6,
      \\"parent\\": 1
    }]
  });
}
"
`;
